# OpenCV

./: .gitignore  OpenCV_selection.cmake  README.md
books/Learning_OpenCV/: CMakeLists.txt  online_solutions.txt
books/Learning_OpenCV/Chapter01/exercises/: exercise01.txt  exercise02.txt
books/Learning_OpenCV/Chapter02/: CMakeLists.txt  example2-01.cpp  example2-02.cpp  example2-03.cpp
books/Learning_OpenCV/Chapter02/examples/: example2-01  example2-02  example2-03  example2-03.cpp  example2-04  example2-04.cpp  example2-05  example2-06  example2-07  example2-08  example2-09  example2-09.cpp  example2-10  example2-10.cpp
books/Learning_OpenCV/Chapter02/exercises/: CMakeLists.txt  exercise2-03.cpp  exercise2-04.cpp  exercise2-05.cpp
books/Learning_OpenCV/Chapter03/: CMakeLists.txt  example3-02.cpp  example3-03.cpp  example3-05.cpp  example3-06.cpp  example3-07.cpp  example3-08.cpp  example3-09.cpp  example3-13.cpp  example3-14.cpp  example3-17.cpp  example3-19.cpp
books/Learning_OpenCV/Chapter03/examples/: example3-01.cpp  example3-04.cpp  example3-10.cpp  example3-11.cpp  example3-12.cpp  example3-15.cpp  example3-16.cpp  example3-18.xml
books/Learning_OpenCV/Chapter03/exercises/: CMakeLists.txt  exercise3-01.cpp  exercise3-02.cpp  exercise3-03.cpp  exercise3-04.cpp  exercise3-05.cpp  exercise3-06.cpp  exercise3-07.cpp  exercise3-08.cpp
books/Learning_OpenCV/Chapter04/: example4-02.cpp  example4-03.cpp
books/Learning_OpenCV/Chapter04/examples/: CMakeLists.txt
books/Learning_OpenCV/Chapter04/exercises/: CMakeLists.txt  exercise4-01a.cpp  exercise4-01bc.cpp  exercise4-02.cpp  exercise4-02a.cpp  exercise4-03a.cpp  exercise4-04.cpp
books/Learning_OpenCV/Chapter05/: CMakeLists.txt  example5-02.cpp  example5-03.cpp
books/Learning_OpenCV/Chapter05/examples/: example5-01.cpp  example5-04.cpp
books/Learning_OpenCV/Chapter05/exercises/: CMakeLists.txt  exercise5-01.cpp  exercise5-01a.cpp  exercise5-01b.cpp  exercise5-02.cpp  exercise5-03.cpp  exercise5-04.cpp  exercise5-05.cpp  exercise5-09.cpp  exercise5-10.cpp  exercise5-11.cpp  exercise5-12.cpp
books/Learning_OpenCV/Chapter06/: example6-01.cpp
books/Learning_OpenCV/Chapter06/examples/: CMakeLists.txt  example6-01.cpp  example6-02.cpp  example6-03.cpp  example6-04.cpp  example6-05.cpp
books/Learning_OpenCV/Chapter06/exercises/: CMakeLists.txt  exercise6-01.cpp
books/Learning_OpenCV/Chapter07/: CMakeLists.txt  example7-01.cpp  example7-02.cpp  example7-03.cpp  example7-04.cpp  example7-05.cpp
books/Learning_OpenCV/Chapter09/: CMakeLists.txt
books/Learning_OpenCV/Chapter09/examples/: CMakeLists.txt  averaging_background_method.cpp  averaging_background_method.h  background_avg_main.cpp  example9-01.cpp
examples/: CMakeLists.txt  capture_properties.cpp  cvMat.cpp  image_properties.cpp
tests/: CMakeLists.txt  cvHoughLines2.cpp  cvMatchTemplate.cpp  framecountertest.cpp  videowriter1.cpp  videowriter2.cpp
