cmake_minimum_required(VERSION 2.6)

project(Learning_OpenCV)

set(CMAKE_CXX_FLAGS "-g")

find_package( OpenCV REQUIRED )

#add_subdirectory(Chapter01)
add_subdirectory(Chapter02)
add_subdirectory(Chapter03)
add_subdirectory(Chapter04)
add_subdirectory(Chapter05)
add_subdirectory(Chapter06)
add_subdirectory(Chapter07)
#add_subdirectory(Chapter08)
add_subdirectory(Chapter09)
