add_executable(example2-01 example2-01.cpp)
target_link_libraries(example2-01 ${OpenCV_LIBS})

add_executable(example2-02 example2-02.cpp)
target_link_libraries(example2-02 ${OpenCV_LIBS})

add_executable(example2-03 example2-03.cpp)
target_link_libraries(example2-03 ${OpenCV_LIBS})

add_executable(example2-04 example2-04.cpp)
target_link_libraries(example2-04 ${OpenCV_LIBS})
