add_executable(example2-01 example2-01.cpp)
target_link_libraries(example2-01 ${OpenCV_LIBS})

add_executable(example2-02 example2-02.cpp)
target_link_libraries(example2-02 ${OpenCV_LIBS})

add_executable(example2-03 example2-03.cpp)
target_link_libraries(example2-03 ${OpenCV_LIBS})

add_executable(example2-04 example2-04.cpp)
target_link_libraries(example2-04 ${OpenCV_LIBS})

add_executable(example2-05 example2-05.cpp)
target_link_libraries(example2-05 ${OpenCV_LIBS})

add_executable(example2-06 example2-06.cpp)
target_link_libraries(example2-06 ${OpenCV_LIBS})

add_executable(example2-07 example2-07.cpp)
target_link_libraries(example2-07 ${OpenCV_LIBS})

add_executable(example2-08 example2-08.cpp)
target_link_libraries(example2-08 ${OpenCV_LIBS})

add_executable(example2-09 example2-09.cpp)
target_link_libraries(example2-09 ${OpenCV_LIBS})

add_executable(example2-10 example2-10.cpp)
target_link_libraries(example2-10 ${OpenCV_LIBS})
