# example3-01 must not be compiled.

# example3-02 must not be compiled.

add_executable(example3-03 example3-03.cpp)
target_link_libraries(example3-03 ${OpenCV_LIBS})

add_executable(example3-04 example3-04.cpp)
target_link_libraries(example3-04 ${OpenCV_LIBS})

add_executable(example3-05 example3-05.cpp)
target_link_libraries(example3-05 ${OpenCV_LIBS})

# example3-06 must not be compiled.

# example3-07 must not be compiled.

# example3-08 must not be compiled.

add_executable(example3-09 example3-09.cpp)
target_link_libraries(example3-09 ${OpenCV_LIBS})

# example3-10 must not be compiled.

add_executable(example3-11 example3-11.cpp)
target_link_libraries(example3-11 ${OpenCV_LIBS})

add_executable(example3-12 example3-12.cpp)
target_link_libraries(example3-12 ${OpenCV_LIBS})

add_executable(example3-13 example3-13.cpp)
target_link_libraries(example3-13 ${OpenCV_LIBS})

add_executable(example3-14 example3-14.cpp)
target_link_libraries(example3-14 ${OpenCV_LIBS})

add_executable(example3-15 example3-15.cpp)
target_link_libraries(example3-15 ${OpenCV_LIBS})

# example3-16 must not be compiled.

add_executable(example3-17 example3-17.cpp)
target_link_libraries(example3-17 ${OpenCV_LIBS})

# example3-18 must not be compiled.

add_executable(example3-19 example3-19.cpp)
target_link_libraries(example3-19 ${OpenCV_LIBS})

add_executable(example3-20 example3-20.cpp)
target_link_libraries(example3-20 ${OpenCV_LIBS})
