add_executable(example5-01 example5-01.cpp)
target_link_libraries(example5-01 ${OpenCV_LIBS})

add_executable(example5-02 example5-02.cpp)
target_link_libraries(example5-02 ${OpenCV_LIBS})

add_executable(example5-03 example5-03.cpp)
target_link_libraries(example5-03 ${OpenCV_LIBS})

add_executable(example5-04 example5-04.cpp)
target_link_libraries(example5-04 ${OpenCV_LIBS})
