add_executable(example7-01 example7-01.cpp)
target_link_libraries(example7-01 ${OpenCV_LIBS})

# example7-02 should not compile.

add_executable(example7-03 example7-03.cpp)
target_link_libraries(example7-03 ${OpenCV_LIBS})

# example7-04 should not compile.

add_executable(example7-05 example7-05.cpp)
target_link_libraries(example7-05 ${OpenCV_LIBS})
