add_executable(exercise3-01 exercise3-01.cpp)
target_link_libraries(exercise3-01 ${OpenCV_LIBS})

add_executable(exercise3-02 exercise3-02.cpp)
target_link_libraries(exercise3-02 ${OpenCV_LIBS})

add_executable(exercise3-03 exercise3-03.cpp)
target_link_libraries(exercise3-03 ${OpenCV_LIBS})

add_executable(exercise3-04 exercise3-04.cpp)
target_link_libraries(exercise3-04 ${OpenCV_LIBS})

add_executable(exercise3-05 exercise3-05.cpp)
target_link_libraries(exercise3-05 ${OpenCV_LIBS})

add_executable(exercise3-06 exercise3-06.cpp)
target_link_libraries(exercise3-06 ${OpenCV_LIBS})

add_executable(exercise3-07 exercise3-07.cpp)
target_link_libraries(exercise3-07 ${OpenCV_LIBS})
