add_executable(exercise4-01a exercise4-01a.cpp)
target_link_libraries(exercise4-01a ${OpenCV_LIBS})

add_executable(exercise4-01bc exercise4-01bc.cpp)
target_link_libraries(exercise4-01bc ${OpenCV_LIBS})

add_executable(exercise4-02 exercise4-02.cpp)
target_link_libraries(exercise4-02 ${OpenCV_LIBS})

add_executable(exercise4-03a exercise4-03a.cpp)
target_link_libraries(exercise4-03a ${OpenCV_LIBS})

add_executable(exercise4-04 exercise4-04.cpp)
target_link_libraries(exercise4-04 ${OpenCV_LIBS})
