add_executable(exercise5-01a exercise5-01a.cpp)
target_link_libraries(exercise5-01a ${OpenCV_LIBS})

add_executable(exercise5-01b exercise5-01b.cpp)
target_link_libraries(exercise5-01b ${OpenCV_LIBS})

add_executable(exercise5-02 exercise5-02.cpp)
target_link_libraries(exercise5-02 ${OpenCV_LIBS})

add_executable(exercise5-03 exercise5-03.cpp)
target_link_libraries(exercise5-03 ${OpenCV_LIBS})

add_executable(exercise5-04 exercise5-04.cpp)
target_link_libraries(exercise5-04 ${OpenCV_LIBS})
