add_executable(exercise5-01a exercise5-01a.cpp)
target_link_libraries(exercise5-01a ${OpenCV_LIBS})

add_executable(exercise5-01b exercise5-01b.cpp)
target_link_libraries(exercise5-01b ${OpenCV_LIBS})

add_executable(exercise5-02 exercise5-02.cpp)
target_link_libraries(exercise5-02 ${OpenCV_LIBS})

add_executable(exercise5-03 exercise5-03.cpp)
target_link_libraries(exercise5-03 ${OpenCV_LIBS})

add_executable(exercise5-04 exercise5-04.cpp)
target_link_libraries(exercise5-04 ${OpenCV_LIBS})

add_executable(exercise5-10 exercise5-10.cpp)
target_link_libraries(exercise5-10 ${OpenCV_LIBS})

add_executable(exercise5-09 exercise5-09.cpp)
target_link_libraries(exercise5-09 ${OpenCV_LIBS})

add_executable(exercise5-11 exercise5-11.cpp)
target_link_libraries(exercise5-11 ${OpenCV_LIBS})

add_executable(exercise5-12 exercise5-12.cpp)
target_link_libraries(exercise5-12 ${OpenCV_LIBS})
