add_executable(example6-01 example6-01.cpp)
target_link_libraries(example6-01 ${OpenCV_LIBS})

add_executable(example6-02 example6-02.cpp)
target_link_libraries(example6-02 ${OpenCV_LIBS})

add_executable(example6-03 example6-03.cpp)
target_link_libraries(example6-03 ${OpenCV_LIBS})

add_executable(example6-04 example6-04.cpp)
target_link_libraries(example6-04 ${OpenCV_LIBS})

add_executable(example6-05 example6-05.cpp)
target_link_libraries(example6-05 ${OpenCV_LIBS})
